test/valid/List/TestListSorter.plume
/**
 * A class to test list sorting
 *
 * @author Vasco T. Vasconcelos
 * @version $Id: TestListSorter.plume 286 2012-05-01 10:24:19Z tcomp000 $
 */
class TestListSorter extends Object is

  method main : () -> String is
    new ListSorter().sort(new Empty().insert(23).insert(3).insert(7).insert(73).insert(9)
		.insert(0).insert(-8).insert(323).insert(-23)).toString()
	// expected output: "-23 :: -8 :: 0 :: 3 :: 7 :: 9 :: 23 :: 73 :: 323 :: []"